--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
         </div>
 
         <ul class="site-nav-list">
-            <li class=""> <a href="./index.html" class="link current">Студія</a></li>
-            <li> <a href="./portfolio.html" class="link">Портфоліо</a></li>
-            <li> <a href="" class="link">Контакти</a></li>
+            <li class=""> <a href="./index.html" class="header-link current">Студія</a></li>
+            <li> <a href="./portfolio.html" class="header-link">Портфоліо</a></li>
+            <li> <a href="" class="header-link">Контакти</a></li>
         </ul>
         </nav>
         <ul class="contact-nav-list">
@@ -400,7 +400,7 @@
                 <svg class="form-field-icon" width="18" height="18">
                     <use href="./images/icons.svg#person-form"></use> 
                 </svg>
-            </span>
+                </span>
             </label>
             <label class="modal-form-field"> 
                 <span class="modal-form-desc">Телефон</span>
@@ -424,8 +424,7 @@
             </label> 
             <label class="modal-form-field">   
                 <span class="modal-form-desc">Коментар</span>
-                <textarea name="user_message" class="modal-form-message" 
-                placeholder="Введіть текст"></textarea>
+                <textarea name="user_message" class="modal-form-message"placeholder="Введіть текст"></textarea>
             </label> 
                 <input id="accept-terms" type="checkbox" name="accept-terms" class="modal-form-check visually-hidden">
                 <label for="accept-terms" class="modal-form-check-desc">Погоджуюся з розсилкою та приймаю &nbsp;<a href="" class="link-form">Умови договору</a>
