--- a/portfolio.html
+++ b/portfolio.html
@@ -24,9 +24,9 @@
         </div>
 
         <ul class="site-nav-list">
-            <li> <a href="./index.html" class="link">Студія</a></li>
-            <li> <a href="./portfolio.html" class="link current">Портфоліо</a></li>
-            <li> <a href="" class="link">Контакти</a></li>
+            <li> <a href="./index.html" class="header-link">Студія</a></li>
+            <li> <a href="./portfolio.html" class="header-link current">Портфоліо</a></li>
+            <li> <a href="" class="header-link">Контакти</a></li>
         </ul>
         </nav>
         <ul class="contact-nav-list">
